[gd_scene load_steps=5 format=3 uid="uid://dq4yawa2biqq8"]

[ext_resource type="Texture2D" uid="uid://cwqbbymgftcw5" path="res://assets/3 Objects/kenny_objects/tile_0151.png" id="1_ed3ni"]
[ext_resource type="Script" path="res://barrel.gd" id="1_t5ci8"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vw062"]
radius = 12.0

[sub_resource type="CircleShape2D" id="CircleShape2D_8trvp"]
radius = 30.0

[node name="barrel" type="RigidBody2D"]
collision_layer = 3
collision_mask = 3
mass = 20.0
gravity_scale = 5.0
script = ExtResource("1_t5ci8")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2.3, 2.3)
texture = ExtResource("1_ed3ni")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vw062")

[node name="BarrelArea2D" type="Area2D" parent="."]
unique_name_in_owner = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="BarrelArea2D"]
shape = SubResource("CircleShape2D_8trvp")

[connection signal="body_entered" from="BarrelArea2D" to="." method="_on_barrel_area_2d_body_entered"]
[connection signal="body_exited" from="BarrelArea2D" to="." method="_on_barrel_area_2d_body_exited"]
